Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,8 +19,21 @@
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="easysign" class="anchor" href="#easysign" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>EasySign</h1>
+      <h3>
+<a id="easysign" class="anchor" href="#easysign" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>EasySign</h3>
+
+<h2>
+<a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h2>
+
+<p>This application is designed to help people learn sign language. The final version was tested and used by Zhenjiang Disabled Persons’ Federation and received positive feedback.</p>
+
+<h2>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
+
+<ul>
+<li>using learning curve to improve efficiency in memorizing various sign language gestures.</li>
+<li>Translating text sentences into sign language videos by breaking a sentence down into words, fetching individual video clips demonstrating the given word, and synthesizing all clips into a single long video showing the given sentence in sign language.</li>
+</ul>
 
 <h2>
 <a id="code-license" class="anchor" href="#code-license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Code License</h2>
