--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Easysign : ">
+    <meta name="description" content="Easy Sign : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Easysign</title>
+    <title>Easy Sign</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/yuting-zhang/EasySign">View on GitHub</a>
 
-          <h1 id="project_title">Easysign</h1>
+          <h1 id="project_title">Easy Sign</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="easysign" class="anchor" href="#easysign" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>EasySign</h1>
+<a id="easy-sign" class="anchor" href="#easy-sign" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Easy Sign</h1>
 
 <h2>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h2>
@@ -82,7 +82,7 @@ should contact Yuting Zhang (yutingzhang@acm.org) directly.
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Easysign maintained by <a href="https://github.com/yuting-zhang">yuting-zhang</a></p>
+        <p class="copyright">Easy Sign maintained by <a href="https://github.com/yuting-zhang">yuting-zhang</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
