Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,15 +37,27 @@
 <h2>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h2>
 
-<p>This application is designed to help people learn sign language. The final version was tested and used by Zhenjiang Disabled Persons’ Federation and received positive feedback.</p>
+<p>This application is designed to help people learn sign language. It has two main functions, the first one is to translate a text into sign language, the other is to use learning curve to help users efficiently learn sign language. The final version was tested and used by Zhenjiang Disabled Persons’ Federation and received positive feedback.</p>
 
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
 
 <ul>
-<li>using learning curve to improve efficiency in memorizing various sign language gestures.</li>
+<li>Using learning curve to improve efficiency in memorizing various sign language gestures.</li>
 <li>Translating text sentences into sign language videos by breaking a sentence down into words, fetching individual video clips demonstrating the given word, and synthesizing all clips into a single long video showing the given sentence in sign language.</li>
+<li>Including two sign language databases: Standard Chinese Sign Language and Zhenjiang Sign Language. So this app can train learners to cater both to more educated deaf people who use Standard Chinese Sign Language and those who can only use the more localized Zhenjiang Sign Language.</li>
 </ul>
+
+<h2>
+<a id="language-and-region-limitation" class="anchor" href="#language-and-region-limitation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Language and Region Limitation</h2>
+
+<p>This app only supports Chinese, and its two sign language databases are very regionally specific. The algorithm used to split a sentence into smaller pieces of words and phrases is also entirely based on characteristics of Chinese Sign Language. As a result, I do not plan to make an English version of this app, since most features will not port well into a new language. </p>
+
+<h2>
+<a id="video-walk-through" class="anchor" href="#video-walk-through" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Video Walk-through</h2>
+
+<p><img src="http://i.imgur.com/HoIMHEI.gif" alt="">
+<img src="http://i.imgur.com/BHrVUaq.gif" alt=""></p>
 
 <h2>
 <a id="code-license" class="anchor" href="#code-license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Code License</h2>
