--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 <h2>
 <a id="video-walk-through" class="anchor" href="#video-walk-through" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Video Walk-through</h2>
 
-<p><img src="http://i.imgur.com/HoIMHEI.gif" alt="">
-<img src="http://i.imgur.com/BHrVUaq.gif" alt=""></p>
+<p><img src="https://i.imgur.com/HoIMHEI.gif" alt="">
+<img src="https://i.imgur.com/BHrVUaq.gif" alt=""></p>
 
 <h2>
 <a id="code-license" class="anchor" href="#code-license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Code License</h2>
